--- a/success.html
+++ b/success.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h2>Sucessfully Registered</h2>
         <h2>THANK YOU</h2>
-        <button>HOME</button>
+        <a href="index.html">Visit W3Schools</a>
         </form>
     </div>
 </body>
