--- a/error.html
+++ b/error.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h2>An Error Occurred</h2>
-        <a href"index.html">HOME</a>
+        <a href="index.html">HOME</a>
         </form>
     </div>
 </body>
