--- a/error.html
+++ b/error.html
@@ -13,4 +13,69 @@
         </form>
     </div>
 </body>
+    <style>
+            <style>
+        @import url('http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'poppins',sans-serif;
+    scroll-behavior: smooth;
+}
+body {
+    background: linear-gradient( #2b1055,#B814ED);
+    overflow: hidden;
+}
+
+.container {
+    width: 30%;
+    justify-content: center;
+    margin-left: 35%;
+    margin-top: 5%;
+    padding: 40px;
+    background: transparent; 
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    box-shadow: 0 25px 50px rgba(0,0,0,0.1);
+    justify-content: center;
+    margin-bottom: 30%;
+        
+}
+.container:hover
+{
+  background: rgba(255,255,255,0.15);  
+  backdrop-filter: blur(25px);
+  border: 1px solid rgba(255,255,255,0.5);
+    border-bottom: 1px solid rgba(255,255,255,0.25);
+    border-left: 1px solid rgba(255,255,255,0.25);
+}
+
+.container h2{
+    position: relative;
+    width: 100%;
+    text-align: center;
+    font-size: 170%;
+    font-weight: 600;
+    color: #ffffff;
+    margin-bottom: 30px;
+
+
+}
+.container a{
+background-color: #04AA6D;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  bordre-radius:25px;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+    </style>
+    </style>
 </html>
