--- a/success.html
+++ b/success.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h2>Sucessfully Registered</h2>
         <h2>THANK YOU</h2>
-        <a href="https://registrationform-svb3.onrender.com/">Visit W3Schools</a>
+        <a href="https://registrationform-svb3.onrender.com/">HOME</a>
         </form>
     </div>
 </body>
